webpublic/: Fix w-logo valign issues once for all
We just make sure the image has no whitespace padding at top/bottom.

--- a/src/main/resources/webpublic/main.css
+++ b/src/main/resources/webpublic/main.css
@@ -51,7 +51,7 @@ header h1 {
 }
 .wlogo {
 	width: 1.1em;
-	vertical-align: text-top;
+	vertical-align: baseline;
 }
 
 #sources {
